bitfield/examples/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `SevenMod8: TotalSizeIsMultipleOf8` is not satisfied
  --> examples/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `TotalSizeIsMultipleOf8` is not implemented for `SevenMod8`
   |
   = help: the trait `TotalSizeIsMultipleOf8` is implemented for `ZeroMod8`
note: required by a bound in `CheckTotalSizeIsMultipleOf8`
  --> src/lib.rs
   |
   |     pub trait CheckTotalSizeIsMultipleOf8
   |               --------------------------- required by a bound in this trait
   |     where
   |         <Self::Size as KnownSize>::Check: TotalSizeIsMultipleOf8,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeIsMultipleOf8`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
